--- a/signup.html
+++ b/signup.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<header class="menubar">
-			<a href="http://orangedatabase.ddns.net:8080" target="_self" title="logo"><img width="300" height="100" src="orange_logo.png" style="border:2.5 solid red"/></a>
+			<a href="http://orangedatabase.ddns.net:8080" target="_self" title="logo"><img width="300" height="100" src="orange_logo.png"/></a>
 		</header>
 		<div id="login-box">
 			<div class="left-box">
@@ -78,7 +78,7 @@
 						   <option value="Cote DIvoire">Cote DIvoire</option>
 						   <option value="Croatia">Croatia</option>
 						   <option value="Cuba">Cuba</option>
-						   <option value="Curaco">Curacao</option>
+						   <option value="Curacao">Curacao</option>
 						   <option value="Cyprus">Cyprus</option>
 						   <option value="Czech Republic">Czech Republic</option>
 						   <option value="Denmark">Denmark</option>
@@ -137,7 +137,7 @@
 						   <option value="Kenya">Kenya</option>
 						   <option value="Kiribati">Kiribati</option>
 						   <option value="Korea North">Korea North</option>
-						   <option value="Korea Sout">Korea South</option>
+						   <option value="Korea South">Korea South</option>
 						   <option value="Kuwait">Kuwait</option>
 						   <option value="Kyrgyzstan">Kyrgyzstan</option>
 						   <option value="Laos">Laos</option>
@@ -193,7 +193,7 @@
 						   <option value="Papua New Guinea">Papua New Guinea</option>
 						   <option value="Paraguay">Paraguay</option>
 						   <option value="Peru">Peru</option>
-						   <option value="Phillipines">Philippines</option>
+						   <option value="Philippines">Philippines</option>
 						   <option value="Pitcairn Island">Pitcairn Island</option>
 						   <option value="Poland">Poland</option>
 						   <option value="Portugal">Portugal</option>
@@ -285,10 +285,10 @@
 						<div id="studentInfo" style="display: none">
 							<input type="text" id="major" name="major" placeholder="Major"/>
 							<p>Please select your level:</p>
-							<input type="radio" id="undergraduate" name="level" value="undergraduate">
+							<input type="radio" id="undergraduate" name="level" value="UG">
 							<label for="undergraduate">Undergraduate</label>		
 							<br>
-							<input type="radio" id="graduate" name="level" value="graduate">
+							<input type="radio" id="graduate" name="level" value="GR">
 							<label for="graduate">Graduate</label>
 						</div>
 						<br>
